--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Research Lab
-email: your-email@domain.com
+title: hmr-lab
+# email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  hmr-lab @ University of Illinois at Urbana-Champaign, led by Dr. Julia Hockenmaier.
 baseurl: ""
 url: ""
 
