--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 04/05/2025
-  title: "hmr-lab's new webpage is now live!"
+  title: "New webpage launch!"
   tags:
     - misc
   content: Meet the new website of hmr-lab @ UIUC!
