--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,15 @@
+- date: 07/09/2025
+  title: "2 papers accepted to COLM 2025!"
+  tags:
+    - misc
+  content: Congratulations to our team members (Ikhyun, Sewoong, Adam, Marc) for being accepted to COLM 2025!
+
+- date: 05/15/2025
+  title: "1 paper accepted to ACL 2025!"
+  tags:
+    - misc
+  content: Congratulations to our team members (Jinu) for being accepted to ACL 2025!
+
 - date: 04/05/2025
   title: "New webpage launch!"
   tags:
