--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 08/27/2025
+  title: "4 papers accepted to EMNLP 2025 (1 Main, 3 Findings)"
+  tags:
+    - misc
+  content: Congratulations to our team members (Ikhyun, Rajarshi, Jinu) for being accepted to EMNLP 2025!
+
 - date: 07/09/2025
   title: "2 papers accepted to COLM 2025!"
   tags:
