--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 12/17/2025
-  title: "1 papers accepted to Computational Linguistics (long papers)!"
+  title: "1 paper accepted to Computational Linguistics (long papers)!"
   tags:
     - misc
   content: Prashant's paper ([BAP v2](https://arxiv.org/abs/2501.10836)) accepted to Computational Linguistics! He is on job market for 2026, so please reach out if interested.
