--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   title: "1 paper accepted to Computational Linguistics (long papers)!"
   tags:
     - misc
-  content: Prashant's paper ([BAP v2](https://arxiv.org/abs/2501.10836)) accepted to Computational Linguistics! He is on job market for 2026, so please reach out if interested.
+  content: Prashant's paper (BAP v2) accepted to Computational Linguistics! He is on job market for 2026, so please reach out if interested.
 
 - date: 08/27/2025
   title: "4 papers accepted to EMNLP 2025 (1 Main, 3 Findings)"
