--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 01/05/2026
+  title: "1 paper accepted to EACL 2026 (1 Findings)"
+  tags:
+    - misc
+  content: Congratulations to our team members (Sid, Risham) for being accepted to EACL 2026!
+
 - date: 12/17/2025
   title: "1 paper accepted to Computational Linguistics (long papers)!"
   tags:
