--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: hmr-lab @ UIUC
+title: Hockenmaier Lab @ UIUC
 # email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  hmr-lab @ University of Illinois at Urbana-Champaign, led by Dr. Julia Hockenmaier.
+  Hockenmaier Lab @ University of Illinois at Urbana-Champaign, led by Dr. Julia Hockenmaier.
 baseurl: ""
 url: ""
 
