--- a/_data/news.yml
+++ b/_data/news.yml
@@ -32,4 +32,4 @@
   title: "New webpage launch!"
   tags:
     - misc
-  content: Meet the new website of hmr-lab @ UIUC!
+  content: Meet the new website of Hockenmaier Lab @ UIUC!
